# Python_seminer

./: .gitattributes  .gitignore  Pysemi.md  Pythonセミナー説明会.pptx
2nd/: main.py  pyproject.toml
3rd/: Python_seminar_no3_homework.ipynb  Python_seminar_no3_homeworkv2.ipynb  Python_seminar_no3teppei_homework.ipynb  Python_seminar_no3teppeiv2_homework.ipynb  Pythonセミナー第3回次回予告.pptx  main.py  pyproject.toml  第3回_宇津原説明分.pptx
4th/: .gitignore  Python_seminar_no4_homework.ipynb  feature_engineering_Kakuda.ipynb  material_lifeapan_Kakuda.ipynb  pyproject.toml  python_seminar_4_ml_terms.pptx
5th/: .gitignore  Pythonセミナー第5回_次回予告 .pptx  REPORT.md  main.ipynb  main.py  pyproject.toml  pysemi#5_kazuma_v2.pptx
5th/results/: best_parameters.json  metrics.csv
5v2/: Python_seminar_no2_homework.ipynb  pyproject.toml  pysemi5_kazuma.ipynb
5v3/: Python_seminar_no2_homework.ipynb  pyproject.toml  pysemi#5_kazuma_v3.pptx  pysemi5_kazuma.ipynb  pysemi5_kazuma_g2.ipynb  pysemi_kazuma_teach.ipynb  補足pysemi#5.pptx
6th/: mnict_pca_contribution_ratios.csv  mnict_pca_umap_cluster_results.csv  mnict_visualization_clustering.ipynb  pyproject.toml  pysemi6_kazuma_v1.ipynb
7/: applicability-domain_model-comparison_supplement_2026_07_07.pptx  applicability_domain_boston.ipynb  applicability_domain_boston_method_comparison.ipynb  applicability_domain_boston_model_comparison.ipynb  pyproject.toml  pysemi_kazuma#7.ipynb  適用ドメイン.pptx
8th/: 8thanswer.ipynb.py  AA.ipynb  Answer.ipynb  main.py  pyproject.toml  pysemi#8_kazumav1.ipynb  pysemi8_xgboost_predictions.csv  test_titanic.csv  train_titanic.csv  パイソンセミナー予告.pptx  答え合わせコード.docx
8th/outputs/: pysemi8_workflow_details.pptx  pysemi8_workflow_details.pptx.inspect.ndjson
9th/: Pysemi#9search.md  Pysemi#9v1.ipynb  Pysemi#9v1.md  Pysemi#9v2.ipynb  Pysemi#9v2.md  Pythonセミナー第９回.pptx  main.py  pyproject.toml  qm9_bandgap_test_without_answer.csv  qm9_bandgap_train.csv  submissionv1.csv  submissionv2.csv
outputs/: test-arc.pptx  test-ellipse.pptx  test-line.pptx  test-rect.pptx  test-straightConnector1.pptx  test-triangle.pptx
outputs/manual-20260610-python-seminar-4/presentations/python-seminar-4-ml-terms/: claim-spine.txt  (+5 more)
４/: SVR_原理と特徴.md  lasso_feature_engineering.ipynb  svr_material_lifespan.ipynb  第４回予告.pptx
４/outputs/: SVR_原理と特徴.pptx
５/: pyproject.toml  pysemi#5_kazuma.ipynb
(+31 files in other folders)
