[project]
name = "diabetes-classification"
version = "0.1.0"
description = "kNN and Random Forest classification comparison for the diabetes dataset"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.8",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "seaborn>=0.13",
    "tabulate>=0.9",
]

[tool.uv]
package = false
