[project]
name = "python-seminar-5"
version = "0.1.0"
description = "Python seminar classification homework"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29",
    "jupyter>=1.1",
    "matplotlib>=3.9",
    "nbformat>=5.10",
    "numpy>=2.0",
    "pandas>=2.2",
    "scikit-learn>=1.5",
]
