[project]
name = "python-seminar-5"
version = "0.1.0"
description = "Python seminar classification homework"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29",
    "matplotlib>=3.9",
    "nbconvert>=7.16",
    "nbformat>=5.10",
    "numpy>=2.0",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "seaborn>=0.13.2",
]
