[project]
name = "6th"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "jupyterlab>=4.6.0",
    "llvmlite>=0.42",
    "matplotlib>=3.11.0",
    "nbclient>=0.11.0",
    "nbformat>=5.10.4",
    "numba>=0.59",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "scipy>=1.17.1",
    "umap-learn>=0.5.7",
]
