[project]
name = "9th"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=7.3.0",
    "matplotlib>=3.11.1",
    "nbclient>=0.11.0",
    "nbformat>=5.10.4",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "rdkit>=2026.3.4",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "tqdm>=4.69.0",
    "xgboost>=3.2.0",
]
